[gd_scene load_steps=3 format=3 uid="uid://hxa6isn3128r"]

[ext_resource type="Script" uid="uid://cl1qd4ctwyd1d" path="res://scripts/ui/SettingsPanel.gd" id="1_m2wva"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23iuf"]
bg_color = Color(0.15, 0.15, 0.15, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5

[node name="SettingsPanel" type="Panel"]
custom_minimum_size = Vector2(400, 300)
offset_right = 400.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_23iuf")
script = ExtResource("1_m2wva")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Настройки"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MasterVolumeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
text = "Общая громкость"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicVolumeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
text = "Громкость музыки"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.7

[node name="SFXVolumeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="VBoxContainer/SFXVolumeContainer"]
layout_mode = 2
text = "Громкость эффектов"

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer/SFXVolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.8

[node name="UIVolumeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UIVolumeLabel" type="Label" parent="VBoxContainer/UIVolumeContainer"]
layout_mode = 2
text = "Громкость интерфейса"

[node name="UIVolumeSlider" type="HSlider" parent="VBoxContainer/UIVolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "X"
